--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,18 @@
 :root{
     --primary-color:black;
     --secondary-color:#E6E6E6;
+    --neon-orange: #ffb347;
 }
 
 /* Color theme */
 .darktheme{
     --primary-color:#E6E6E6;
     --secondary-color:black;
+    --neon-orange: #ffb347;
 }
 .neon-orange {
-  color: #ffb347;
-  text-shadow: 0 0 5px #ffb347;
+  color: var(--neon-orange);
+  text-shadow: 0 0 5px var(--neon-orange);
 }
 
 html, body {
@@ -123,7 +125,7 @@ backdrop-filter: blur(100%);
 
     .home p {
         margin-top: 10px;
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .btn {
@@ -176,7 +178,7 @@ backdrop-filter: blur(100%);
         padding: 5px; /* Spacing between the image and the glow */
         border-radius: 5%; /* Matching the image border */
         background-color: #0d0d0d; /* Dark background to enhance neon effect */
-        box-shadow: 0 0 10px #ffb347, 0 0 15px #ffb347; /* Neon glow effect */
+        box-shadow: 0 0 10px var(--neon-orange), 0 0 15px var(--neon-orange); /* Neon glow effect */
         transition: transform 0.3s, box-shadow 0.3s; /* Smooth transitions */
     }
 
@@ -193,8 +195,31 @@ backdrop-filter: blur(100%);
     .image-container:hover {
         cursor: auto;
         transform: scale(1.05); /* Slight zoom-in effect */
-        box-shadow: 0 0 10px #ffb347, 0 0 15px #ffb347; /* Neon glow effect */
+        box-shadow: 0 0 10px var(--neon-orange), 0 0 15px var(--neon-orange); /* Neon glow effect */
     }
+
+    .btn-container {
+        display: flex;
+        gap: 15px; /* Space between buttons */
+        margin-top: 20px;
+        justify-content: center; /* Center the buttons horizontally */
+    }
+    
+    .btn {
+        padding: 10px 20px;
+        background-color: rgba(255, 255, 255, 0.3);
+        color: var(--primary-color);
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+        transition: background-color 0.3s;
+    }
+    
+    .btn:hover {
+        background-color: var(--neon-orange); /* Slightly darker on hover (neon orange effect) */
+    }
+    
 
 
 /* About Section */
